tests/baselines/reference/emitArrowFunctionWhenUsingArguments10.errors.txt
emitArrowFunctionWhenUsingArguments10.ts(3,25): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments10.ts (1 errors) ====
    function f() {
        var _arguments = 10;
        var a = () => () => arguments;
                            ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }